# Schatsi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  SCHATSI002.py  SCHATSI003.py  SCHATSI004.py  SCHATSI_data_cleansing.csv  SCHATSI_functional_terms.csv  SCHATSI_included.csv  SCHATSI_included.txt  SCHATSI_ranking.csv  SCHATSI_references.csv  SCHATSI_runtime.csv  Test.py  docker-compose.yml  functional_terms.csv  pdf_importieren.py  pyproject.toml  requirements-profiling.txt  requirements.txt  script.calltree  script.profile
.github/workflows/: main.yml  main_poetry.yml  rp_poetry.yaml
data/metadata/: functional_terms.csv
data/output/: schatsi_data_cleansing.csv  schatsi_included.csv  schatsi_ranking.csv  schatsi_references.csv
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/schatsi/: schatsi.jobs.rst  schatsi.reader.rst  schatsi.rst
documentation/: Entwicklerhandbuch SCHA.T.S.I..md  Nutzerhandbuch_schatsi.md
env/: pyvenv.cfg
env/Scripts/: Activate.ps1  activate  activate.bat
src/: SCHATSI003.py  SCHATSI004.py  execution_logger.py  main.py  run.py  variables.py
src/models/: document.py  metadata.py  ranking.py
src/processor/: ngram_processor.py  ranker.py  text_cleaner.py
src/reader/: base_reader.py  pdf_reader.py  reader_facade.py
src/schatsi/: cli.py  schatsi_ui.py
src/schatsi-ui/: schatsi_ui.py
src/schatsi-ui/components/: uploader.py
src/schatsi/jobs/: __init__.py  base_job.py  parallel_job.py  single_job.py
src/schatsi/models/: ___init__.py  document.py  ranking.py
src/schatsi/processor/: document_processor.py  ngram_processor.py  ranker.py  text_cleaner.py
src/schatsi/reader/: base_reader.py  doc_reader.py  docx_reader.py  pdf_reader.py  reader_facade.py  reader_type.py  xls_reader.py  xlsx_reader.py
src/scripts/: main.py  variables.py
