[tool.poetry]
name = "schatsi"
version = "0.1.2"
description = ""
authors = ["robnoflop <info@robertkasseck.de>"]
readme = "README.md"
homepage = ""
repository = "https://github.com/robnoflop/Schatsi"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
dask = {extras = ["diagnostics", "distributed"], version = "^2022.10.0"}
loguru = "^0.6.0"
nltk = "^3.7"
tqdm = "^4.64.1"
PyMuPDF = "^1.20.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
