[tool.poetry]
name = "schatsi"
version = "0.1.24"
description = ""
authors = ["robnoflop <info@robertkasseck.de>"]
readme = "README.md"
homepage = ""
repository = "https://github.com/robnoflop/Schatsi"

[tool.poetry.dependencies]
python = "^3.9.8"
pandas = "^1.5.1"
dask = {extras = ["diagnostics", "distributed"], version = "^2022.10.0"}
loguru = "^0.6.0"
nltk = "^3.7"
tqdm = "^4.64.1"
PyMuPDF = "^1.20.2"
click = "^8.1.3"
docx2python = "2.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.982"
snakeviz="^2.1.1"
pre-commit = "^3.0.4"


[tool.poetry.group.ui.dependencies]
streamlit = "^1.14.0"
plotly = "^5.12.0"


[tool.poetry.group.doc.dependencies]
sphinx = "^5.3.0"
autodoc = "^0.5.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.1.1"
rstcheck = "^6.1.1"
graphviz = "^0.20.1"
pydot = "^1.4.2"
coverage = "^6.5.0"

[tool.poetry.scripts]
schatsi = 'schatsi.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


